# livox_360_processing

./: CMakeLists.txt  README.md  package.xml
docker/: Dockerfile  MID360_config.json  cerrar_docker.sh  entrar.sh  entrypoint.sh  instrucciones  run  run_livox
launch/: interpolated_livox.launch
rviz/: livox.rviz
src/: bicubic_interpol_livox.cpp  convert_pointcloud3.py  interpolated_livox.cpp  livox_repub.cpp
